# Assitant

./: .env.exampl  .gitignore  README.md  check_db.py  crm.db  main.py  pyproject.toml  requirements.txt
agents/: checkIntent.py  classifyfiles.py  complaintAgent.py  fraudRiskAgent.py  gemini.py  gemini_agent.py  invoiceAgent.py  regulationAgent.py  rfqAgent.py
api/: memoryRoute.py
memory/: agent_data.db  database.py
static/: crm.html  index.html  main.js
templates/: crm.html  json.tpl
utils/: classifyfiles.py  dbutils.py  orchestrator.py  pdfutils.py
