[project]
name = "assistant"
version = "0.1.0"
description = "A chatbot with tool calling capabilities"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "langchain-core>=0.3.0",
    "langchain-google-genai>=0.1.0",
    "langchain-community>=0.0.30",
    "python-dotenv>=1.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "python-multipart"
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []  # Explicitly set to empty since we only have a single module
py-modules = ["main"]  # Explicitly specify the main module
