[project]
name = "assitant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "google-genai>=1.18.0",
    "jinja2>=3.1.6",
    "langchain>=0.3.25",
    "langchain-google-genai>=2.1.5",
    "pymupdf>=1.26.0",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.3",
]
